--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 
 			<li><a href="https://github.com/sdesojo" class="icon brands fa-github"><span class="label">GitHub</span></a>
 			</li>
-			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fa-solid fa-person-chalkboard"><span
+			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fas fa-video"><span
 						class="label">Talks</span></a>
 			</li>
-			<li><a href="https://github.com/sdesojo" class="icon fa-address-book"><span class="label">CV</span></a>
+			<li><a href="https://www.icloud.com/iclouddrive/0c3BPohzIcpU0ZseyAy39cqKg#sdesojo_cv"
+					class="icon fa-address-book"><span class="label">CV</span></a>
 			</li>
 
 			<!-- <li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="fa-brands fa-square-bluesky"><span
