--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>sdesojo</title>
+	<title>/sdesojo</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,11 +18,11 @@
 	<!-- Header -->
 	<header id="header">
 		<h1>Sílvia De Sojo</h1>
-		<p> PhD student, Social Complexity Lab at Technical University of Denmark<br>
-			Visiting Researcher, MIT Senseable City Lab<br>
-			<br>
-			<em>🛠 Site under construction</em>
+		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark), and <br>
+			visiting researcher at MIT Senseable City Lab<br>
 
+			<br>
+			<em>🛠 the gender gaps in human mobility</em>
 		</p>
 	</header>
 
@@ -35,7 +35,7 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="mailto:sdesojoc@gmail.com?subject= #reaching-out" class="icon fa-envelope"><span
+			<li><a href="mailto:sdesojoc@gmail.com?subject=[reaching-out] Add Subject" class="icon fa-envelope"><span
 						class="label">Email</span></a></li>
 
 			<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
@@ -47,19 +47,17 @@
 			<li><a href="https://github.com/sdesojo" class="icon brands fa-github"><span class="label">GitHub</span></a>
 			</li>
 			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fas fa-video"><span
-						class="label">Talks</span></a>
+						class="label"></span></a>
 			</li>
 			<li><a href="https://www.icloud.com/iclouddrive/0c3BPohzIcpU0ZseyAy39cqKg#sdesojo_cv"
 					class="icon fa-address-book"><span class="label">CV</span></a>
 			</li>
-
 			<!-- <li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="fa-brands fa-square-bluesky"><span
 						class="label">Bluesky</span></a>
 			</li> -->
 			<!-- <li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="icon fa-envelope"><span
 						class="label">Bluesky</span></a>
 			</li> -->
-
 
 
 		</ul>
