--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	<header id="header">
 		<h1>Sílvia De Sojo</h1>
 		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark), and <br>
-			visiting researcher at MIT Senseable City Lab<br>
+			visiting researcher at MIT Senseable City Lab.<br>
 
 			<br>
-			<em>🛠 the gender gaps in human mobility</em>
+			<em><i class="fas fa-book"></i> The gender gaps in human mobility</em>
 		</p>
 	</header>
 
