--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			visiting researcher at MIT Senseable City Lab.<br>
 
 			<br>
-			<em><i class="fas fa-book"></i> The gender gaps in human mobility</em>
+			<em><i class="fas fa-bookmark"></i> The gender gaps in human mobility</em>
 		</p>
 	</header>
 
