--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
 			<li><a href="https://github.com/sdesojo" class="icon brands fa-github"><span class="label">GitHub</span></a>
 			</li>
+			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="icon fa-users"><span
+						class="label">Bluesky</span></a>
+			</li>
 			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fas fa-video"><span
 						class="label"></span></a>
 			</li>
@@ -55,9 +58,7 @@
 			<!-- <li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="fa-brands fa-square-bluesky"><span
 						class="label">Bluesky</span></a>
 			</li> -->
-			<!-- <li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="icon fa-envelope"><span
-						class="label">Bluesky</span></a>
-			</li> -->
+
 
 
 		</ul>
