--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<!-- Header -->
 	<header id="header">
 		<h1>Sílvia De Sojo</h1>
-		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark), and <br>
-			visiting researcher at MIT Senseable City Lab.<br>
+		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark), and a visiting researcher at
+			MIT Senseable City Lab.<br>
 
 			<br>
 			<em><i class="fas fa-bookmark"></i> The gender gaps in human mobility</em>
