--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Header -->
 	<header id="header">
 		<h1>Sílvia De Sojo</h1>
-		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark), and a visiting researcher at
+		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark) and a visiting researcher at
 			MIT Senseable City Lab.<br>
 			<em><i class="fas fa-bookmark"></i> The gender gaps in human mobility</em>
 		</p>
