--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header id="header">
 		<h1>SÍLVIA DE SOJO</h1>
 		<p> I am a PhD student at Social Complexity Lab (Technical University of Denmark) and a visiting researcher at
-			MIT Senseable City Lab.<br>
+			MIT Senseable City Lab.<br><br>
 			<em><i class="fas fa-bookmark"></i> The gender gaps in human mobility</em>
 		</p>
 	</header>
