Update bluesky logo

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
 			</li>
 			<li><a href="https://github.com/sdesojo" class="icon brands fa-github"><span class="label">GitHub</span></a>
 			</li>
-			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="icon fa-users"><span
+<!-- 			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="icon fa-users"><span
 						class="label">Bluesky</span></a>
+			</li> -->
+			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" title="Bluesky">
+			    <img src="images/blusky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; vertical-align: middle;">
+			   </a>
 			</li>
 			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fas fa-video"><span
 						class="label"></span></a>
