--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						class="label">Bluesky</span></a>
 			</li> -->
 			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" title="Bluesky">
-			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; vertical-align: middle;">
+			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; margin-top: -2px;">
 			   </a>
 			</li>
 			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fas fa-video"><span
