--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 <!-- 			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" class="icon fa-users"><span
 						class="label">Bluesky</span></a>
 			</li> -->
-			<li><a href="https://bsky.app/profile/sdesojo.bsky.social" title="Bluesky">
+			<li>
+			  <a href="https://bsky.app/profile/sdesojo.bsky.social" title="Bluesky" style="display: inline-flex; align-items: center;">
 			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; margin-top: -2px;">
-			   </a>
+			  </a>
 			</li>
-			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fas fa-video"><span
+
+			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fa-brands fa-youtube"></i>"><span
 						class="label"></span></a>
 			</li>
 			<li><a href="https://www.icloud.com/iclouddrive/0c3BPohzIcpU0ZseyAy39cqKg#sdesojo_cv"
