--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 			</li> -->
 			<li>
 			  <a href="https://bsky.app/profile/sdesojo.bsky.social" title="Bluesky" style="display: inline-flex; align-items: center;">
-			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; margin-top: -2px;">
+			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; margin-top: 0px;">
 			  </a>
 			</li>
 
-			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="fa-brands fa-youtube"></i>"><span
+			<li><a href="https://www.youtube.com/watch?v=eqTcj61zAok" class="icon brands fa-youtube"></i>"><span
 						class="label"></span></a>
 			</li>
 			<li><a href="https://www.icloud.com/iclouddrive/0c3BPohzIcpU0ZseyAy39cqKg#sdesojo_cv"
