--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</li> -->
 			<li>
 			  <a href="https://bsky.app/profile/sdesojo.bsky.social" title="Bluesky" style="display: inline-flex; align-items: center;">
-			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; ">
+			    <img src="images/bluesky.svg" alt="Bluesky icon" style="width: 1.25em; height: 1.25em; vertical-align: middle; margin-top: 0.1em;">
 			  </a>
 			</li>
 
