Modify research description in index.html
Updated the description of the research focus in the header.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h1>SÍLVIA DE SOJO</h1>
 		<p> PhD student at Social Complexity Lab (Technical University of Denmark) and visiting researcher at
 			MIT Senseable City Lab. Working on: <br><br>
-			<em><i class="fas fa-bookmark"></i> The gender gaps in human mobility</em>
+			<em><i class="fas fa-bookmark"></i> Gendered mobility: Insights from large-scale behavioral data</em>
 		</p>
 	</header>
 
@@ -76,3 +76,4 @@
 </body>
 
 </html>
+
